--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
  <html>
    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>The Lisbon VR</title>
-    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Cutive+Mono' type='text/css'>
+    <title>EiziPark</title>
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -13,136 +13,38 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!-- social meta tags -->
-    <meta property="og:title" content="The Lisbon VR">
+    <!-- <meta property="og:title" content="The Lisbon VR">
     <meta property="og:description" content="Experiências de Realidade Virtual">
     <meta property="og:image" content="https://raw.githubusercontent.com/the-lisbon-vr/static-page/master/images/dive-into-virtual-reality.jpg">
     <meta property="og:url" content="http://thelisbonvr.com">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image"> -->
 
   </head>
   <body>
 
     <!-- Banner with title and call for action: -->
     <div class="wrapper">
-      <div class="banner vh-centered text-center text-white bg-gray" style="background-image: linear-gradient(-45deg, rgba(30,70,102,0.7), rgba(30,100,70,0.7)), url('images/rodrigo-02.png');">
-        <div class="padded text-white">
-          <h1>The Lisbon VR</h1>
+      <div class="banner vh-centered text-center text-black bg-white">
+        <div class="padded text-black">
+          <h1>EiziPark</h1>
         </div>
-        <div class="padded text-white hidden-xs">
-          <h2>Dive into Virtual Reality</h2>
+        <div class="padded text-black hidden-xs">
+          <h2>Park Like A Boss</h2>
         </div>
-        <div class="padded text-white hidden-xs">
-          <h3>Realidade virtual nos seus eventos.</h3>
+        <div class="padded text-black hidden-xs">
+          <h3>The parking solution for busy cities.</h3>
         </div>
-        <div class="padded text-white hidden-sm hidden-md hidden-lg">
-          <h4>Realidade virtual nos seus eventos.</h4>
+        <div class="padded text-black hidden-sm hidden-md hidden-lg">
+          <h4>The parking solution for busy cities.</h4>
+        </div>
+
+        <div class="game-thumbnail hidden">
+          <a href="https://www.youtube.com/watch?v=ZDDr6KjSpAY" target="_blank"><img src="images/thumb-trials-on-tatooine.png" alt="trials on tatooine game cover"></a>
         </div>
 
         <div class="row">
           <div class="col-xs-12">
-            <a href="#banner-form" id="btn-action" class="btn btn-success btn-lg">Reserve Já</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- VR to your events: -->
-    <div class="wrapper">
-      <div id="banner-to-your-events" class="banner centered text-center text-white bg-gray"">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-              <h3><strong>O Melhor de Outro Mundo</strong></h3>
-              <p><strong>Não sabe o que é realidade virtual (VR)?</strong> Veja aqui o video promocional do <strong>HTC vive</strong>, o melhor equipamento de VR da actualidade.</p>
-            </div>
-          </div>
-        </div>
-        <!-- show small video on MOBILE: -->
-        <div class="video-container hidden-sm hidden-md hidden-lg">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/qYfNzhLXYGc?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen id="video-valve-demo"></iframe>
-        </div>
-        <!-- show regular sized video on tablet and DESKTOP: -->
-        <div class="video-container hidden-xs">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/qYfNzhLXYGc?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-
-    <!-- Our services: -->
-    <div class="wrapper">
-      <div id="banner-services" class="banner centered text-center text-white bg-gray">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-              <h3><strong>Aluguer de Experiências</strong></h3>
-              <p><strong>Podemos estar no seu próximo evento</strong>, seja ele um evento empresarial, um evento de promoção da sua marca ou uma festa de aniversário.</p>
-            </div>
-          </div>
-          <div class="price-table">
-            <div class="row">
-              <div class="col-xs-6 col-sm-3 col-sm-offset-3 fill-gray">
-                <div>3 horas</div>
-                <div>€ 80</div>
-              </div>
-              <div class="col-xs-6 col-sm-3 fill-gray">
-                <div>6 horas</div>
-                <div>€ 120</div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-              <div class="price-include text-left">
-                <h4>Os preços incluem:</h4>
-                <ul>
-                  <li>1 PC Gaming</li>
-                  <li>1 HTC Vive (óculos de VR)</li>
-                  <li>1 sistema tracking room-scale HTC</li>
-                  <li>1 membro do staff The Lisbon VR</li>
-                  <li>Acesso à nossa biblioteca de jogos</li>
-                  <li>Montagem e desmontagem do sistema</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="price-table text-left">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Games + Experiences -->
-    <div class="wrapper">
-      <div  id="banner-games-experiences" class="banner centered text-center text-white bg-gray">
-        <div class="container" id="container-games">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-              <h3><strong>Os Jogos de Maior Sucesso!</strong></h3>
-              <p>Estes são alguns dos jogos mais populares a nível mundial para o HTC Vive. <strong>Poderá jogá-los com o The Lisbon VR!</strong></p>
-              <div class="games-thumbnails">
-
-              <!-- Thumbnails must be squares. Sized in css to 200x200: -->
-                <div class="game-thumbnail">
-                  <a href="https://www.youtube.com/watch?v=sFaC-9Q-Fp8" target="_blank"><img src="images/thumb-accounting.png" alt="accounting game cover"></a>
-                </div>
-                <div class="game-thumbnail">
-                  <a href="https://www.youtube.com/watch?v=l_gWDl_f6V8" target="_blank"><img src="images/thumb-arizona-sunshine.png" alt="arizona sunshine game cover"></a>
-                </div>
-                <div class="game-thumbnail">
-                  <a href="https://www.youtube.com/watch?v=gbp7xX9QPOc&t=6s" target="_blank"><img src="images/thumb-budget-cuts.png" alt="budget cuts game cover"></a>
-                </div>
-                <div class="game-thumbnail">
-                  <a href="https://www.youtube.com/watch?v=c1J7GeqraRE&t=29s" target="_blank"><img src="images/thumb-recroom.png" alt="rec room game cover"></a>
-                </div>
-                <div class="game-thumbnail">
-                  <a href="https://www.youtube.com/watch?v=ASVku-48N8Q" target="_blank"><img src="images/thumb-thelab.png" alt="the lab game cover"></a>
-                </div>
-                <div class="game-thumbnail">
-                  <a href="https://www.youtube.com/watch?v=ZDDr6KjSpAY" target="_blank"><img src="images/thumb-trials-on-tatooine.png" alt="trials on tatooine game cover"></a>
-                </div>
-              </div>
-
-            </div>
+            <a href="#banner-form" id="btn-action" class="btn btn-success btn-lg">Saber Mais</a>
           </div>
         </div>
       </div>
@@ -150,12 +52,11 @@
 
     <!-- Form for reservations: -->
     <div class="wrapper">
-      <div id="banner-form" class="banner centered text-center text-white bg-gray" style="background-image: linear-gradient(-45deg, rgba(30,70,102,0.7), rgba(30,100,70,0.7)), url('images/rodrigo-03.png');">
-        <h2>Reservas, Dúvidas, Sugestões?</h2>
-        <h3>Contacte-nos através do seguinte formulário.</h3>
+      <div id="banner-form" class="banner centered text-center text-black bg-white">
+        <h2>Contacte-nos</h2>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-            <form action="https://formspree.io/diogofgr@gmail.com" method="POST" class="form">
+            <form action="https://formspree.io/info@eizipark.co" method="POST" class="form">
             <!-- IMPORTANT - When in testing use /the-lisbon-vr/thanks.html: -->
               <input type="hidden" name="_next" value="/thanks.html" />
               <input type="hidden" name="_subject" value="New submission!" />
@@ -172,13 +73,13 @@
       </div>
     </div>
 
-    <div class="wrapper bg-gray">
+    <div class="wrapper bg-white">
       <div class="footer text-center">
-        <a href="https://www.facebook.com/thelisbonvr/" target="_blank">
-          <i class="fa fa-facebook-square text-white" aria-hidden="true"></i>
+        <a href="#" target="_blank">
+          <i class="fa fa-facebook-square text-black" aria-hidden="true"></i>
         </a>
-        <a href="https://www.facebook.com/thelisbonvr/">
-          <h4>The Lisbon VR 2017</h4>
+        <a href="#">
+          <h4>EiziPark 2017</h4>
         </a>
       </div>
     </div>
