add logo in index and thanks.html

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
     <!-- Banner with title and call for action: -->
     <div class="wrapper">
       <div class="banner vh-centered text-center text-black bg-white">
-        <div class="padded text-black">
+<!--         <div class="padded text-black">
           <h1>EiziPark</h1>
+        </div> -->
+        <div class="container" style="border-style: dashed;">
+          <img src="images/logo.png" alt="easy park logo">
         </div>
-        <div class="padded text-black hidden-xs">
-          <h2>Park Like A Boss</h2>
+
+        <div class="text-black hidden-xs">
+          <h1>Park Like A Boss</h1>
         </div>
         <div class="padded text-black hidden-xs">
           <h3>The parking solution for busy cities.</h3>
         </div>
         <div class="padded text-black hidden-sm hidden-md hidden-lg">
           <h4>The parking solution for busy cities.</h4>
-        </div>
-
-        <div class="game-thumbnail hidden">
-          <a href="https://www.youtube.com/watch?v=ZDDr6KjSpAY" target="_blank"><img src="images/thumb-trials-on-tatooine.png" alt="trials on tatooine game cover"></a>
         </div>
 
         <div class="row">
