add more imgae sizes for mobile

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 <!--         <div class="padded text-black">
           <h1>EiziPark</h1>
         </div> -->
-        <div class="container" style="border-style: dashed;">
-          <img src="images/logo.png" alt="easy park logo">
+        <div class="container">
+          <img class="hidden-xs hidden-sm hidden-md" src="images/logo.png" width="700" alt="easy park logo">
+          <img class="hidden-xs hidden-lg" src="images/logo.png" width="500" alt="easy park logo">
+          <img class="hidden-lg hidden-sm hidden-md" src="images/logo.png" width="250" alt="easy park logo">
         </div>
 
         <div class="text-black hidden-xs">
