--- a/thanks.html
+++ b/thanks.html
@@ -18,9 +18,11 @@
       <div class="banner vh-centered text-center text-black bg-white">
       <div class="row">
         <div class="col-xs-12 text-black">
-          <div class="container">
-            <img src="images/logo.png" alt="easy park logo">
-          </div>
+        <div class="container">
+          <img class="hidden-xs hidden-sm hidden-md" src="images/logo.png" width="700" alt="easy park logo">
+          <img class="hidden-xs hidden-lg" src="images/logo.png" width="500" alt="easy park logo">
+          <img class="hidden-lg hidden-sm hidden-md" src="images/logo.png" width="250" alt="easy park logo">
+        </div>
         </div>
       </div>
 
