add subtitle in permanent marker font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>EiziPark</title>
-    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Varela+Round|Permanent+Marker' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
           <img class="hidden-lg hidden-sm hidden-md" src="images/logo.png" width="250" alt="easy park logo">
         </div>
 
-        <div class="text-black hidden-xs">
+        <div class="text-right text-black hidden-xs permanent-marker-subtitle">
           <h1>Park Like A Boss</h1>
         </div>
         <div class="padded text-black hidden-xs">
