--- a/thanks.html
+++ b/thanks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>EiziPark</title>
-    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Varela+Round|Permanent+Marker' type='text/css'>
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -28,7 +28,7 @@
 
       <div class="row">
         <div class="col-xs-12 text-black">
-          <h1>Obrigado pelo Seu Contacto!</h1>
+          <h3>Obrigado pelo Seu Contacto!</h3>
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
           <div class="padded text-black">
